<resources>
    <string name="app_name">GrannyApp2022</string>
    <string name="heading_text">Welcome to your new Phone App</string>
    <string name="name"></string>
    <string name="password"></string>
    <string name="button_sign_in">Login</string>
    <string name="error_text" />
    <string name="title_activity_welcome_user">WelcomeUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_one">Button 1</string>
    <string name="button_two">Button 2</string>
    <string name="user_profile_pic">profile pic</string>
</resources>