<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeUser"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/heading_text"
        android:layout_marginBottom="40dp"/>

    <ImageView
        android:id="@+id/ivUserPic"
        android:layout_width="243dp"
        android:layout_height="330dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="29dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/user_profile_pic"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnOne"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_one" />

        <Button
            android:id="@+id/btnTwo"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_two" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblWelcomeHP"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/error_text"
        android:layout_marginBottom="40dp"/>

</LinearLayout>