<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center_horizontal"
    android:background="@color/teal_700">

    <TextView
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/heading_text"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/txtUserNameHP"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="29dp"
        android:autofillHints=""
        android:hint="Enter your name"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtPasswordHP"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:hint="Enter your password"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"/>

    <Button
        android:id="@+id/btnSignIn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_sign_in" />

    <TextView
        android:id="@+id/lblErrorHP"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/error_text"
        android:layout_marginBottom="40dp"/>

</LinearLayout>